# bevy_fmod_phonon

./: .gitignore  Cargo.toml  README.md
examples/: minimal.rs
src/: lib.rs  phonon_mesh.rs  phonon_plugin.rs
src/phonon_mesh/: instancing.rs  material.rs  mesh.rs  mod.rs
