[package]
name = "bevy_fmod_phonon"
description = "Bevy integration for the Steam Audio FMOD plugin."
version = "0.1.0"
edition = "2024"
repository = "https://github.com/GitGhillie/bevy_fmod_phonon"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_asset", "bevy_render"] }
audionimbus = { version = "0.6", features = ["fmod"] }
bevy_fmod = { git = "https://github.com/Salzian/bevy_fmod.git", branch = "main" }
libfmod = "~2.222.6" # todo check if we can get rid of this dependency

[dev-dependencies]
bevy = { version = "0.15", default-features = true }
smooth-bevy-cameras = "0.13" # todo remove
iyes_perf_ui = "0.4" # todo remove

[[example]]
name = "minimal"